Fixed issue: captcha spacing for new col-8 design

--- a/assets/survey_themes/ls6_surveytheme/participant/captcha/captcha.scss
+++ b/assets/survey_themes/ls6_surveytheme/participant/captcha/captcha.scss
@@ -17,7 +17,7 @@
     margin-left : 10px;
 }
 
-@media only screen and (max-width : 991px) {
+@media (max-width: 1199.98px) {
     .captcha-input {
         padding-top : 8px;
     }
