--- a/themes/survey/ls6_surveytheme/css/variations/theme_litchi.css
+++ b/themes/survey/ls6_surveytheme/css/variations/theme_litchi.css
@@ -15327,7 +15327,7 @@ a [class^=ri-], a [class*=" ri-"] {
   margin-left: 10px;
 }
 
-@media only screen and (max-width: 991px) {
+@media (max-width: 1199.98px) {
   .captcha-input {
     padding-top: 8px;
   }
